@@ -45,7 +45,7 @@ use warnings;
 use Class::Factory;
 use base qw(Class::Factory);
 
-our $VERSION = '0.02';
+our $VERSION = '0.03';
 
 sub new {
     my ($pkg, $type, @params) = @_;
